[package]
name = "geckopandacli"
version = "0.1.1"
edition = "2021"
description = "Manage files backed up to Google Drive"
repository = "https://github.com/ArielHorwitz/geckopandacli"
keywords = [
    "google",
    "drive",
    "files",
    "cli",
    "backup",
]

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
geckopanda = "0.2.0"

[[bin]]
name = "geckopanda"
path = "src/main.rs"

